adding feature UX UI user Folders

--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -14,6 +14,8 @@ $pink: rgb(238, 74, 123);
 $white : #FFFFFF;
 $black: #000000;
 $light_gray: #e4e4e4;
+$black_code: rgb(52, 52, 52);
+$black_code_hover : rgba(52, 52, 52,0.9);
 
 // COLORS
 $softorange: #F4A259;
