--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -16,7 +16,8 @@ $black: #000000;
 $light_gray: #e4e4e4;
 $black_code: rgb(52, 52, 52);
 $black_code_hover : rgba(52, 52, 52,0.9);
-
+$select_folder: rgb(233,237,254);
+$color_font_select_folder : rgb(91, 114, 168);
 // COLORS
 $softorange: #F4A259;
 $tomatored: #F25C66;
